--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,7 @@
+<!-- Author: Alexander Shvets (alex@githowto.com) -->
 <html>
 	<head>
-  	</head>
+	</head>
 	<body>
 		<h1>Hello, World! </h1>
 	</body>
